--- a/queryraiserapp/templates/admintechnicianreports.html
+++ b/queryraiserapp/templates/admintechnicianreports.html
@@ -358,12 +358,12 @@
                     technicianPerformance.forEach(technician => {
                         const row = document.createElement('tr');
                         row.innerHTML = `
-                            <td style="color:#525b75;">${technician.name}</td>
+                            <td>${technician.name}</td>
                             <td style="color:#007bff;">${technician.assigned}</td>
                             <td style="color:#28a745;">${technician.resolved}</td>
                             <td style="color:#dc3545;">${technician.pending}</td>
                             <td style="color:#A9A9A9;">${technician.closed}</td>
-                            <td style="color:#525b75;">${technician.rating}</td>
+                            <td>${technician.rating}</td>
                             <td><button onclick="openComplaintOverlay(this)" data-complaint="${encodeURIComponent(JSON.stringify(technician))}" class="save-button" style="display:flex;align-items:center;gap:5px;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
                                 <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8M1.173 8a13 13 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5s3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5s-3.879-1.168-5.168-2.457A13 13 0 0 1 1.172 8z"/>
